--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-
 
     <string name="app_name">东海网</string>
     <string name="title_activity_home">HomeActivity</string>
@@ -13,5 +11,8 @@
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_web">WebActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_web_view">WebViewActivity</string>
 
 </resources>
