实现了检测滚动时最后一个item是否显示的ListView。添加了底部刷新的ListView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,11 @@
     <string name="title_activity_web">WebActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_web_view">WebViewActivity</string>
+    
+    <string name="refresh_footer_default"></string>
+    <string name="refresh_footer_refreshing">正在加载...</string>
+    <string name="refresh_footer_no_more">没有更多内容了</string>
+    <string name="refresh_footer_clickable">点击加载更多</string>
+    <string name="refresh_footer_auto"></string>
 
 </resources>
