--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,8 @@
     <string name="title_section2">视频</string>
     <string name="title_section3">点播</string>
     <string name="title_section4">广播</string>
-    <string name="title_section5">Section 3</string>
+    <string name="title_section5">直播</string>
+    <string name="title_section6">Section 3</string>
     <!--导读fragment标题-->
 
     <!--空视图文本-->
