添加了应用初始化功能，初始化时同步Category信息，添加定时同步信息功能（Category信息）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_web_view">WebViewActivity</string>
 
+    <!--应用初始化对话框-->
+    <string name="init_dialog_hint">初始化失败，请检查网络</string>
+    <string name="init_dialog_positive">重试</string>
+    <string name="init_dialog_negative">退出</string>
+    <!--应用初始化对话框-->
+
 
     <!--底部刷新组件提示文本-->
     <string name="refresh_footer_default"></string>
