写了MediaController,不是在弹出窗口中显示，可能要改成弹出窗口

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,7 @@
 
     <string name="title_fragment_news">新闻</string>
     <string name="title_activity_program_detail">ProgramDetailActivity</string>
+    <string name="title_activity_video_player">VideoPlayerActivity</string>
+    <string name="title_activity_tvlist">TVListActivity</string>
 
 </resources>
